--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
-name : test_task
-
 
 services:
   postgres:
     container_name: postgres_db
-    restart: on_fail
+    restart: on-failure
     image: postgres
     ports:
       - "${POSTGRES_PORT}:5432"
