--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "asyncpg>=0.30.0",
+    "black>=25.1.0",
     "colorlog>=6.9.0",
+    "isort>=6.0.1",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.43",
 ]
